--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.9",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/crypto-js": "^4.2.1",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^18.18.13",
     "@vitejs/plugin-vue": "^4.5.0",
