--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/test-utils": "^2.4.2",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.19",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
