--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,13 +26,10 @@ jobs:
       - name: Zip build folder
         run: zip -r dist.zip dist
 
-      - name: Upload dist.zip as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist.zip
       - name: Upload dist.zip to release
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./dist.zip
