--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,8 +27,10 @@ jobs:
         run: zip -r dist.zip dist
 
       - name: Upload to release
-        uses: JasonEtco/upload-to-release@master
-        with:
-          args: dist.zip application/zip
+        uses: xresloader/upload-to-github-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          file: "dist.zip"
+          tags: true
+          draft: true
