--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,9 +26,12 @@ jobs:
       - name: Zip build folder
         run: zip -r dist.zip dist
 
+      - name: ls
+        run: ls
+
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist.zip
+          file: ./dist.zip
           tag: ${{ github.ref }}
