docs: 优化 SEO 配置并添加站点地图
- 添加 robots meta 标签，允许所有搜索引擎抓取
- 添加 Google 站点验证 meta 标签
- 启用 lastUpdated 和 cleanUrls 功能
- 配置 sitemap 生成器，指定主机名为 https://uni-translate-doc.todream.net

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,10 +4,12 @@
   "description": "Documentation for UniTranslate Web Control Panel",
   "scripts": {
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:build": "vitepress build && node scripts/generate-sitemap.js",
+    "docs:preview": "vitepress preview",
+    "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "devDependencies": {
-    "vitepress": "^1.5"
+    "vitepress": "1.0.0-rc.31",
+    "sitemap": "^7.1.1"
   }
 }
