docs: 优化文档结构和内容
- 更新了首页布局和样式
- 重构了快速开始指南
- 新增了常见问题解答（FAQ）章节
- 完善了配置说明和使用示例
- 更新了项目组件和功能特性描述

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "build-zip": "run-p type-check \"build-only {@}\" -- && zip dist.zip -r dist",
+    "dev": "vite --mode development",
+    "build": "run-p type-check \"build-only {@}\" -- --mode production",
+    "build-zip": "run-p type-check \"build-only {@}\" -- --mode production && zip dist.zip -r dist",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -15,6 +15,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.7",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
