docs(docs): 更新文档样式和依赖
- 移除 .content 类的样式
- 更新 vitepress 依赖到 1.5.0
- 添加 @iconify-json/simple-icons 依赖
- 更新其他依赖版本

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "devDependencies": {
-    "vitepress": "1.0.0-rc.31",
+    "vitepress": "^1.5",
     "sitemap": "^7.1.1"
   }
 }
