--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --mode development",
     "build": "vue-tsc --noEmit && vite build --mode production",
-    "build-zip": "npm run build && zip dist.zip -r dist",
+    "build-zip": "rm -rf dist dist.zip &&npm run build && zip dist.zip -r dist",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
