--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "highlight.js": "^11.11.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "remixicon": "^4.6.0",
     "vue": "^3.3.9",
     "vue-router": "^4.2.5"
   },
